fixed background image position on mobile

--- a/style-home.css
+++ b/style-home.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body, html{
+    overflow-x: hidden; 
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -337,7 +341,7 @@ nav {
 
 @media screen and (max-width: 600px){
 
-    body {
+    body html{
         overflow-x: hidden; 
     }
 
